--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/support": "^5.5|^6.0|^7.0|^8.0",
-        "illuminate/validation": "^5.5|^6.0|^7.0|^8.0"
+        "illuminate/support": "^5.5|^6.0|^7.0|^8.0|^8.1",
+        "illuminate/validation": "^5.5|^6.0|^7.0|^8.0|^8.1"
     },
     "require-dev": {
         "phpspec/phpspec": "^5.0|^6.0|^7.0",
